# audits-punishment

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: 00_project_overview.md  01_research_questions.md  02_data_sources.md  03_data_download_plan.md  04_llm_pipeline_design.md  05_linking_strategy.md  06_validation_and_error.md  07_econometrics_plan.md  08_decisions_log.md  09_conversation_history.md
scripts/: bootstrap.sh  run_ingest_all.sh  run_llm_all.sh  run_parse_all.sh
src/audits_punishment/: __init__.py  config.py  logging.py  paths.py
src/audits_punishment/ingest/: __init__.py  cgu_audits.py  cgu_audits_open_data.py  cgu_lottery.py  cgu_report_fetch_probe.py  cnj_datajud.py  stj_ckan.py
src/audits_punishment/llm/: __init__.py  extract_audit_finding_cards.py  extract_decision_outcomes.py  schemas.py  score_matches.py
src/audits_punishment/llm/prompts/: README.md  audit_finding_card.md  decision_outcome.md  match_score.md
src/audits_punishment/parse/: __init__.py  chunk_audits.py  chunk_decisions.py
src/audits_punishment/utils/: __init__.py  http.py  io.py  pdf.py  text.py
tests/: test_cgu_audits_discovery.py  test_cgu_audits_open_data.py  test_cgu_lottery_parser.py  test_cgu_report_fetch_probe.py  test_crosswalk_ibge.py  test_paths.py  test_schemas.py
